Fix issues on Firefox and Safari browsers: -Firefox:  * Issue where collecting coins made table stretch/shrink.  * Fix by removing table properties from CSS. -Safari:  * Issue where animation was not working.  * Fix by adding -webkit-keyframes section in CSS. Note: Firefox and Safari are known for lag, Safari being the worst.

--- a/stylesheets/sprites.css
+++ b/stylesheets/sprites.css
@@ -44,13 +44,15 @@
 	height: 50px;
 	background: url("../assets/sprites.png") left center;
 	animation: play .5s steps(6) infinite;
+	-webkit-animation: anim .5s steps(1) infinite;
 }
 
 .coin-collected{
 	width: 50px;
 	height: 50px;
 	background: url("../assets/coin_collected.png") left center;
-	animation: play .3s steps(6) infinite;
+	animation: play .3s steps(7) infinite;
+	-webkit-animation: anim .3s steps(1) infinite;
 }
 
 .vane{
@@ -58,6 +60,17 @@
 	height: 50px;
 	background: url("../assets/vaneSprite.png") left center;
 	animation: play .5s steps(2) infinite;
+	-webkit-animation: anim 1s steps(1) infinite;
+}
+
+@-webkit-keyframes anim {
+    0% {background-position: -300px;}
+    17% {background-position: -50px;}
+    34% {background-position: -100px;}
+    51% {background-position: -150px;}
+    68% {background-position: -200px;}
+    85% {background-position: -250px;}
+    100% {background-position: -300px;}
 }
 
 @keyframes play{
